@@ -1,4 +1,7 @@
 2016-05-02  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* perl/Amanda/Status.pm: Fix for new shm-ring in protocol
+
+2016-05-02  Jean-Louis Martineau <JMartineau@carbonite.com>
 	client use shm-ring between sendbackup and amandad
 	shm-ring is use between client and server if using the local auth
 	* amandad-src/amandad.c: handle data stream in a shm-ring
